# CLoaclisation

./: CMakeLists.txt  CMakeListsTest.txt  Makefile  README.md  main.cpp  qiproject.xml
include/: clocalization.h  config.h  geometry.h  kernelcloc.h  receivers.h  remoteloc.h
lib/: custom.cpp
messenger/: Custom.cpp  Custom.h  Message.h  custom.h  message.h
src/: clocalization.cpp  kernelcloc.cpp  receivers.cpp  remoteloc.cpp
